build/generated/dogeGrammarParser.cpp

// Generated from dogeGrammar.g4 by ANTLR 4.13.2



#include "dogeGrammarParser.h"


using namespace antlrcpp;
using namespace customlanguage;

using namespace antlr4;

namespace {

struct DogeGrammarParserStaticData final {
  DogeGrammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  DogeGrammarParserStaticData(const DogeGrammarParserStaticData&) = delete;
  DogeGrammarParserStaticData(DogeGrammarParserStaticData&&) = delete;
  DogeGrammarParserStaticData& operator=(const DogeGrammarParserStaticData&) = delete;
  DogeGrammarParserStaticData& operator=(DogeGrammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag dogegrammarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<DogeGrammarParserStaticData> dogegrammarParserStaticData = nullptr;

void dogegrammarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (dogegrammarParserStaticData != nullptr) {
    return;
  }
#else
  assert(dogegrammarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<DogeGrammarParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "assignment", "functionCall", "functionDef", 
      "loop", "expr"
    },
    std::vector<std::string>{
      "", "'='", "'('", "')'", "'{'", "'}'", "'for'", "','", "'where'", 
      "'+'", "'-'", "'*'", "'/'", "'['", "']'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "ID", 
      "INT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  dogegrammarParserStaticData = std::move(staticData);
}

}

dogeGrammarParser::dogeGrammarParser(TokenStream *input) : dogeGrammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

dogeGrammarParser::dogeGrammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  dogeGrammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *dogegrammarParserStaticData->atn, dogegrammarParserStaticData->decisionToDFA, dogegrammarParserStaticData->sharedContextCache, options);
}

dogeGrammarParser::~dogeGrammarParser() {
  delete _interpreter;
}

const atn::ATN& dogeGrammarParser::getATN() const {
  return *dogegrammarParserStaticData->atn;
}

std::string dogeGrammarParser::getGrammarFileName() const {
  return "dogeGrammar.g4";
}

const std::vector<std::string>& dogeGrammarParser::getRuleNames() const {
  return dogegrammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& dogeGrammarParser::getVocabulary() const {
  return dogegrammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView dogeGrammarParser::getSerializedATN() const {
  return dogegrammarParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

dogeGrammarParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<dogeGrammarParser::StatementContext *> dogeGrammarParser::ProgramContext::statement() {
  return getRuleContexts<dogeGrammarParser::StatementContext>();
}

dogeGrammarParser::StatementContext* dogeGrammarParser::ProgramContext::statement(size_t i) {
  return getRuleContext<dogeGrammarParser::StatementContext>(i);
}


size_t dogeGrammarParser::ProgramContext::getRuleIndex() const {
  return dogeGrammarParser::RuleProgram;
}


dogeGrammarParser::ProgramContext* dogeGrammarParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, dogeGrammarParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(15); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(14);
      statement();
      setState(17); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == dogeGrammarParser::T__5

    || _la == dogeGrammarParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

dogeGrammarParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

dogeGrammarParser::AssignmentContext* dogeGrammarParser::StatementContext::assignment() {
  return getRuleContext<dogeGrammarParser::AssignmentContext>(0);
}

dogeGrammarParser::FunctionCallContext* dogeGrammarParser::StatementContext::functionCall() {
  return getRuleContext<dogeGrammarParser::FunctionCallContext>(0);
}

dogeGrammarParser::FunctionDefContext* dogeGrammarParser::StatementContext::functionDef() {
  return getRuleContext<dogeGrammarParser::FunctionDefContext>(0);
}

dogeGrammarParser::LoopContext* dogeGrammarParser::StatementContext::loop() {
  return getRuleContext<dogeGrammarParser::LoopContext>(0);
}


size_t dogeGrammarParser::StatementContext::getRuleIndex() const {
  return dogeGrammarParser::RuleStatement;
}


dogeGrammarParser::StatementContext* dogeGrammarParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, dogeGrammarParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(23);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(19);
      assignment();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(20);
      functionCall();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(21);
      functionDef();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(22);
      loop();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

dogeGrammarParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* dogeGrammarParser::AssignmentContext::ID() {
  return getToken(dogeGrammarParser::ID, 0);
}

dogeGrammarParser::ExprContext* dogeGrammarParser::AssignmentContext::expr() {
  return getRuleContext<dogeGrammarParser::ExprContext>(0);
}


size_t dogeGrammarParser::AssignmentContext::getRuleIndex() const {
  return dogeGrammarParser::RuleAssignment;
}


dogeGrammarParser::AssignmentContext* dogeGrammarParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 4, dogeGrammarParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    match(dogeGrammarParser::ID);
    setState(26);
    match(dogeGrammarParser::T__0);
    setState(27);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionCallContext ------------------------------------------------------------------

dogeGrammarParser::FunctionCallContext::FunctionCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* dogeGrammarParser::FunctionCallContext::ID() {
  return getToken(dogeGrammarParser::ID, 0);
}

dogeGrammarParser::ExprContext* dogeGrammarParser::FunctionCallContext::expr() {
  return getRuleContext<dogeGrammarParser::ExprContext>(0);
}


size_t dogeGrammarParser::FunctionCallContext::getRuleIndex() const {
  return dogeGrammarParser::RuleFunctionCall;
}


dogeGrammarParser::FunctionCallContext* dogeGrammarParser::functionCall() {
  FunctionCallContext *_localctx = _tracker.createInstance<FunctionCallContext>(_ctx, getState());
  enterRule(_localctx, 6, dogeGrammarParser::RuleFunctionCall);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29);
    match(dogeGrammarParser::ID);
    setState(30);
    match(dogeGrammarParser::T__1);
    setState(31);
    expr(0);
    setState(32);
    match(dogeGrammarParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDefContext ------------------------------------------------------------------

dogeGrammarParser::FunctionDefContext::FunctionDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> dogeGrammarParser::FunctionDefContext::ID() {
  return getTokens(dogeGrammarParser::ID);
}

tree::TerminalNode* dogeGrammarParser::FunctionDefContext::ID(size_t i) {
  return getToken(dogeGrammarParser::ID, i);
}

std::vector<dogeGrammarParser::StatementContext *> dogeGrammarParser::FunctionDefContext::statement() {
  return getRuleContexts<dogeGrammarParser::StatementContext>();
}

dogeGrammarParser::StatementContext* dogeGrammarParser::FunctionDefContext::statement(size_t i) {
  return getRuleContext<dogeGrammarParser::StatementContext>(i);
}


size_t dogeGrammarParser::FunctionDefContext::getRuleIndex() const {
  return dogeGrammarParser::RuleFunctionDef;
}


dogeGrammarParser::FunctionDefContext* dogeGrammarParser::functionDef() {
  FunctionDefContext *_localctx = _tracker.createInstance<FunctionDefContext>(_ctx, getState());
  enterRule(_localctx, 8, dogeGrammarParser::RuleFunctionDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    match(dogeGrammarParser::ID);
    setState(35);
    match(dogeGrammarParser::T__1);
    setState(36);
    match(dogeGrammarParser::ID);
    setState(37);
    match(dogeGrammarParser::T__2);
    setState(38);
    match(dogeGrammarParser::T__3);
    setState(40); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(39);
      statement();
      setState(42); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == dogeGrammarParser::T__5

    || _la == dogeGrammarParser::ID);
    setState(44);
    match(dogeGrammarParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LoopContext ------------------------------------------------------------------

dogeGrammarParser::LoopContext::LoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> dogeGrammarParser::LoopContext::ID() {
  return getTokens(dogeGrammarParser::ID);
}

tree::TerminalNode* dogeGrammarParser::LoopContext::ID(size_t i) {
  return getToken(dogeGrammarParser::ID, i);
}

dogeGrammarParser::ExprContext* dogeGrammarParser::LoopContext::expr() {
  return getRuleContext<dogeGrammarParser::ExprContext>(0);
}

std::vector<dogeGrammarParser::StatementContext *> dogeGrammarParser::LoopContext::statement() {
  return getRuleContexts<dogeGrammarParser::StatementContext>();
}

dogeGrammarParser::StatementContext* dogeGrammarParser::LoopContext::statement(size_t i) {
  return getRuleContext<dogeGrammarParser::StatementContext>(i);
}


size_t dogeGrammarParser::LoopContext::getRuleIndex() const {
  return dogeGrammarParser::RuleLoop;
}


dogeGrammarParser::LoopContext* dogeGrammarParser::loop() {
  LoopContext *_localctx = _tracker.createInstance<LoopContext>(_ctx, getState());
  enterRule(_localctx, 10, dogeGrammarParser::RuleLoop);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(dogeGrammarParser::T__5);
    setState(47);
    match(dogeGrammarParser::T__1);
    setState(48);
    match(dogeGrammarParser::ID);
    setState(49);
    match(dogeGrammarParser::T__6);
    setState(50);
    match(dogeGrammarParser::ID);
    setState(51);
    match(dogeGrammarParser::T__2);
    setState(52);
    match(dogeGrammarParser::T__7);
    setState(53);
    match(dogeGrammarParser::T__1);
    setState(54);
    expr(0);
    setState(55);
    match(dogeGrammarParser::T__2);
    setState(56);
    match(dogeGrammarParser::T__3);
    setState(58); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(57);
      statement();
      setState(60); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == dogeGrammarParser::T__5

    || _la == dogeGrammarParser::ID);
    setState(62);
    match(dogeGrammarParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

dogeGrammarParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<dogeGrammarParser::ExprContext *> dogeGrammarParser::ExprContext::expr() {
  return getRuleContexts<dogeGrammarParser::ExprContext>();
}

dogeGrammarParser::ExprContext* dogeGrammarParser::ExprContext::expr(size_t i) {
  return getRuleContext<dogeGrammarParser::ExprContext>(i);
}

tree::TerminalNode* dogeGrammarParser::ExprContext::ID() {
  return getToken(dogeGrammarParser::ID, 0);
}

tree::TerminalNode* dogeGrammarParser::ExprContext::INT() {
  return getToken(dogeGrammarParser::INT, 0);
}


size_t dogeGrammarParser::ExprContext::getRuleIndex() const {
  return dogeGrammarParser::RuleExpr;
}



dogeGrammarParser::ExprContext* dogeGrammarParser::expr() {
   return expr(0);
}

dogeGrammarParser::ExprContext* dogeGrammarParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  dogeGrammarParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  dogeGrammarParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 12;
  enterRecursionRule(_localctx, 12, dogeGrammarParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(83);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case dogeGrammarParser::T__1: {
        setState(65);
        match(dogeGrammarParser::T__1);
        setState(66);
        expr(0);
        setState(67);
        match(dogeGrammarParser::T__2);
        break;
      }

      case dogeGrammarParser::ID: {
        setState(69);
        match(dogeGrammarParser::ID);
        break;
      }

      case dogeGrammarParser::INT: {
        setState(70);
        match(dogeGrammarParser::INT);
        break;
      }

      case dogeGrammarParser::T__12: {
        setState(71);
        match(dogeGrammarParser::T__12);
        setState(80);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 106500) != 0)) {
          setState(72);
          expr(0);
          setState(77);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == dogeGrammarParser::T__6) {
            setState(73);
            match(dogeGrammarParser::T__6);
            setState(74);
            expr(0);
            setState(79);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(82);
        match(dogeGrammarParser::T__13);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(90);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleExpr);
        setState(85);

        if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
        setState(86);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 7680) != 0))) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(87);
        expr(6); 
      }
      setState(92);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

bool dogeGrammarParser::sempred(RuleContext *context, size_t ruleIndex, size_t predicateIndex) {
  switch (ruleIndex) {
    case 6: return exprSempred(antlrcpp::downCast<ExprContext *>(context), predicateIndex);

  default:
    break;
  }
  return true;
}

bool dogeGrammarParser::exprSempred(ExprContext *_localctx, size_t predicateIndex) {
  switch (predicateIndex) {
    case 0: return precpred(_ctx, 5);

  default:
    break;
  }
  return true;
}

void dogeGrammarParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  dogegrammarParserInitialize();
#else
  ::antlr4::internal::call_once(dogegrammarParserOnceFlag, dogegrammarParserInitialize);
#endif
}
